src/test/ui/generic-associated-types/empty_generics.stderr
error: expected one of `>`, `const`, identifier, or lifetime, found `,`
  --> $DIR/empty_generics.rs:5:14
   |
LL |     type Bar<,>;
   |              ^ expected one of `>`, `const`, identifier, or lifetime

error: aborting due to previous error

